Replace commons-codec and commons-io with Java standard library in server-core
   Remove the last two Apache Commons dependencies from server-core, leaving
   only Jackson as an external dependency:

   - commons-codec Base64 → java.util.Base64 (with lenient URL-safe decoder
     helper to preserve Apache Commons decode semantics for byte[] input)
   - commons-codec DecoderException → IllegalArgumentException
   - commons-io IOUtils.copy → InputStream.transferTo (Java 9+)
   - commons-io IOUtils.toString/toInputStream/toByteArray → standard
     java.io equivalents in 11 test files